my first commit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </picture>
           <div class="card-content">
             <h6>HTML5</h6>
-            <p>Experiencia maquetando modernas websites con HTML5</p>
+            <p>HTML5 expert - 5 years experience.</p>
           </div>
         </li>
         <li class="card">
@@ -43,7 +43,7 @@
           </picture>
           <div class="card-content">
             <h6>CSS3</h6>
-            <p>Experiencia maquetando modernas websites con CSS3</p>
+            <p>CSS3 expert - 5 years experience.</p>
           </div>
         </li>
         <li class="card">
@@ -53,7 +53,7 @@
           </picture>
           <div class="card-content">
             <h6>Javascript</h6>
-            <p>1 año de experiencia con javascript y ES6</p>
+            <p>Javascript expert - 5 years experience.</p>
           </div>
         </li>
       </ul>
